--- a/src/Components/LeadsComponents/Leads/leads.css
+++ b/src/Components/LeadsComponents/Leads/leads.css
@@ -50,6 +50,24 @@
     margin-bottom: 25px;
 }
 
+.closebtn{
+    border: none;
+    outline: none;
+    background-color: transparent;
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    width: 50px;  
+    border-radius: 50%;  
+    border: 4px solid rgba(0, 0,0, 0.5);
+}
+
+.closebtn > img {
+    width: 100%;
+    height: 100%;
+    
+}
+
 .successpopup .innerpopup {
     background: rgba(255, 255, 255, 0.7);
     backdrop-filter: blur(17.920225143432617px);
