--- a/src/Components/LeadsComponents/MenuCategories/menucategories.css
+++ b/src/Components/LeadsComponents/MenuCategories/menucategories.css
@@ -14,6 +14,7 @@
 }
 
 .leadpage .btn2 {
+    /* width: 160px; */
     border-radius: 100px;
     font-size: 16px;
     font-weight: 400;
@@ -21,6 +22,7 @@
     transition: all .3s;
     padding: 10px 15px;
     line-height: normal;
+    white-space: nowrap;
 }
 
 .leadpage .btn2:hover svg {
