--- a/src/Components/DashboardComponents/Dashboard/dashboard.css
+++ b/src/Components/DashboardComponents/Dashboard/dashboard.css
@@ -85,13 +85,13 @@
     margin-left: 10px;
 }
 
-.topdishestabpart > nav {
+.topdishestabpart>nav {
     overflow: auto;
     width: 100%;
     padding-bottom: 2px;
 }
 
-.topdishestabpart > nav > .nav { 
+.topdishestabpart>nav>.nav {
     width: 100%;
     min-width: 915px;
     margin: 1px 0;
@@ -101,19 +101,19 @@
 .topdishestabpart .nav-tabs {
     border: none;
 }
- 
-.topdishestabpart > nav {
+
+.topdishestabpart>nav {
     overflow: auto;
     width: 100%;
     padding-bottom: 2px;
 }
 
-.topdishestabpart nav > .nav .swiper {
+.topdishestabpart nav>.nav .swiper {
     padding-bottom: 30px;
 }
- 
-.topdishestabpart nav > .nav .swiper-button-prev,
-.topdishestabpart nav > .nav .swiper-button-next {
+
+.topdishestabpart nav>.nav .swiper-button-prev,
+.topdishestabpart nav>.nav .swiper-button-next {
     top: auto;
     bottom: 0px;
     background: url(../../../images/arrowsign.svg) top center no-repeat;
@@ -121,22 +121,20 @@
     width: 52px;
     height: 10px;
 }
- 
- 
-.topdishestabpart nav > .nav .swiper-button-next {
+
+
+.topdishestabpart nav>.nav .swiper-button-next {
     transform: rotate(-180deg);
 }
- 
-.topdishestabpart nav > .nav .swiper-button-prev:after,
-.topdishestabpart nav > .nav .swiper-button-next:after{
+
+.topdishestabpart nav>.nav .swiper-button-prev:after,
+.topdishestabpart nav>.nav .swiper-button-next:after {
     font-size: 0;
 }
- 
-.topdishestabpart nav > .nav .swiper-button-prev {
- 
-}
- 
-.topdishestabpart > nav > .nav {
+
+.topdishestabpart nav>.nav .swiper-button-prev {}
+
+.topdishestabpart>nav>.nav {
     width: 100%;
     min-width: 915px;
     margin: 1px 0;
@@ -152,7 +150,7 @@
     border-radius: 19px;
     width: 90%;
     max-width: 100%;
- }
+}
 
 
 .topdishestabpart .nav-tabs .nav-link figure {
@@ -186,6 +184,7 @@
     background: transparent;
     margin: 0;
 }
+
 .topdishestabpart .nav-tabs .nav-link button img {
     width: 10px;
 }
@@ -202,7 +201,7 @@
     padding: 0;
 }
 
-.topdishestabpart .nav-tabs .nav-link .buttonbox svg { 
+.topdishestabpart .nav-tabs .nav-link .buttonbox svg {
     stroke: #fff;
 }
 
@@ -229,7 +228,7 @@
 }
 
 .topdishestabpart .nav-tabs .nav-link:hover .buttonbox svg,
-.topdishestabpart .nav-tabs .nav-link.active .buttonbox svg {  
+.topdishestabpart .nav-tabs .nav-link.active .buttonbox svg {
     stroke: #EA6A12;
 }
 
@@ -257,17 +256,17 @@
 }
 
 .topdishestabpart .tab-content ul li:nth-child(4n+4) {
-   margin-right: 0;
+    margin-right: 0;
 }
 
-.topdishestabpart .tab-content ul li > .title {
+.topdishestabpart .tab-content ul li>.title {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 15px;
 }
 
-.topdishestabpart .tab-content ul li h4 { 
+.topdishestabpart .tab-content ul li h4 {
     color: #000;
     font-size: 14px;
     font-weight: 700;
@@ -276,11 +275,9 @@
     transition: all .3s ease;
 }
 
-.topdishestabpart .tab-content ul li > .title { 
+.topdishestabpart .tab-content ul li>.title {}
 
-}
-
-.topdishestabpart .tab-content ul li > .title button{
+.topdishestabpart .tab-content ul li>.title button {
     border: none;
     outline: none;
     background: transparent;
@@ -288,11 +285,11 @@
 }
 
 
-.topdishestabpart .tab-content ul li > .title button + button {
+.topdishestabpart .tab-content ul li>.title button+button {
     margin-left: 7px;
 }
 
-.topdishestabpart .tab-content ul li > .title button img {
+.topdishestabpart .tab-content ul li>.title button img {
     width: 10px;
 }
 
@@ -306,11 +303,11 @@
     transition: all .3s ease;
 }
 
-.topdishestabpart .tab-content ul li .price{
+.topdishestabpart .tab-content ul li .price {
     color: #EA6A12;
     font-size: 15px;
     font-weight: 400;
-    line-height: 1.2;   
+    line-height: 1.2;
     transition: all .3s ease;
 }
 
@@ -328,22 +325,23 @@
 }
 
 
-.topdishestabpart .tab-content ul li .tabinfo{
+.topdishestabpart .tab-content ul li .tabinfo {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
 }
 
-.topdishestabpart .tab-content ul li .tabinfo > .leftpart {
+.topdishestabpart .tab-content ul li .tabinfo>.leftpart {
     width: 60%;
     padding-right: 5px;
 }
-.topdishestabpart .tab-content ul li .tabinfo > .rightpart { 
+
+.topdishestabpart .tab-content ul li .tabinfo>.rightpart {
     width: 40%;
     padding-left: 5px;
 }
 
-.topdishestabpart .tab-content ul li .tabinfo > .rightpart > img {
+.topdishestabpart .tab-content ul li .tabinfo>.rightpart>img {
     width: 100%;
 }
 
@@ -382,12 +380,12 @@
     margin-left: 10px;
 }
 
-.managerstablepart .managerstable{
+.managerstablepart .managerstable {
     overflow: auto;
 }
 
 .managerstablepart table {
-    overflow: auto;    
+    overflow: auto;
     width: 100%;
     min-width: 650px;
     margin-bottom: 10px;
@@ -398,14 +396,14 @@
     align-items: center;
     justify-content: space-between;
     background: rgba(255, 255, 255, 0.60);
-    border-radius: 12px;    
+    border-radius: 12px;
 }
 
-.managerstable tr:not(:last-child){
+.managerstable tr:not(:last-child) {
     margin-bottom: 15px;
 }
 
-.managerstable tr:first-child{
+.managerstable tr:first-child {
     background: rgba(239, 148, 86, 0.70);
     border-radius: 12px;
 }
@@ -433,10 +431,10 @@
     width: 200px;
 }
 
-.managerstable th:last-child ,
-.managerstable td:last-child  {
+.managerstable th:last-child,
+.managerstable td:last-child {
     width: 340px;
-}  
+}
 
 .managerstable td {
     color: #000;
@@ -452,22 +450,22 @@
 }
 
 
-.subplanbox{
-    background:url(../../../images/planbg.svg) top right no-repeat;
+.subplanbox {
+    background: url(../../../images/planbg.svg) top right no-repeat;
     background-size: cover;
     border-radius: 19px;
     padding: 20px 25px 10px;
     width: 100%;
 }
 
-.subplanbox > .title{
+.subplanbox>.title {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 30px;
 }
 
-.subplanbox > .title h3 {
+.subplanbox>.title h3 {
     color: #000;
     font-size: 28px;
     font-weight: 700;
@@ -475,32 +473,33 @@
     padding-right: 10px;
 }
 
-.subplanbox > .title button {
+.subplanbox>.title button {
     color: #000;
     font-size: 12px;
     font-weight: 400;
     line-height: 1.3;
     background-color: transparent;
-    border:none;
+    border: none;
     outline: none;
 }
 
-.subplanbox > .title button img{
+.subplanbox>.title button img {
     margin-left: 5px;
 }
 
-.subplanbox > .info {
+.subplanbox>.info {
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
 }
 
-.subplanbox > .info > .leftpart {
+.subplanbox>.info>.leftpart {
     padding-right: 10px;
 }
 
-.subplanbox > .info > .leftpart p {
+.subplanbox>.info>.leftpart p {
     color: #000;
-    font-size: 22px;
+    font-size: 16px;
     font-weight: 400;
     line-height: 1.3;
     margin-bottom: 10px;
@@ -508,33 +507,50 @@
 
 
 .qrbox {
-    padding: 25px;
+    background: url(../../../images/planbg.svg) top right no-repeat #fff;
+    background-size: contain;
     border-radius: 20px;
-    background: #FFF;
-    backdrop-filter: blur(21px);
-    text-align: center;
-    /* max-width: 400px; */
+    padding: 25px;
+    width: 100%;
     margin: 25px auto 0;
 }
 
-.qrbox > .info {
+.qrbox .menbox:after {
+    clear: both;
+    display: table;
+    content: "";
+}
+
+.qrimg {
+    float: left;
+    width: 62%;
+    margin-top: 15px;
+}
+
+.qrmenimg {
+    float: right;
+    width: 40%;
+    margin-left: -2%;
+}
+
+.qrbox>.info {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 25px 0 0;
 }
 
-.qrbox > .info > span {
+.qrbox>.info>span {
     color: #000;
     font-size: 16px;
     font-weight: 400;
-    line-height: 1.3;    
+    line-height: 1.3;
 }
 
-.qrbox > .info button {
+.qrbox>.info button {
     border: none;
     outline: none;
-    background:transparent;
+    background: transparent;
     color: #EA6A12;
     font-size: 16px;
     line-height: 1.3;
@@ -543,7 +559,7 @@
 
 
 
-.topdishestabpart > nav::-webkit-scrollbar,
+.topdishestabpart>nav::-webkit-scrollbar,
 .login-box::-webkit-scrollbar {
     /* width: 5px; */
     height: 1px;
@@ -551,14 +567,41 @@
     background: rgba(0, 0, 0, 0.3);
 }
 
-.topdishestabpart > nav::-webkit-scrollbar-thumb,
+.topdishestabpart>nav::-webkit-scrollbar-thumb,
 .login-box::-webkit-scrollbar-thumb {
     border-radius: 5px;
     background: linear-gradient(90.18deg, #8EC22C 2.36%, #379640 99.96%);
 }
 
 
+@media(max-width:1199px) {
+    .viewall-part {
+        flex-wrap: wrap;
+    }
+    .viewall-part>.leftpart {
+        width: 100%;
+    }
+    .viewall-part>.rightpart {
+        width: 100%;
+        margin-top: 25px;
+    }
+}
 
 
+@media(max-width:580px) { 
+.bannerbox h2 {
+    font-size: 18px;
+}
+
+.bannerbox h3{
+    font-size: 23px;
+}
+.managerstablepart>.title>h2,
+.topdishespart>.title>h2,
+.subplanbox>.title h3    {
+    font-size: 20px;
+}
+
+}
 
 
