--- a/src/Components/SubscriptionPage/subscription.css
+++ b/src/Components/SubscriptionPage/subscription.css
@@ -42,7 +42,7 @@
     justify-content: center;
     padding: 12px 17px 12px 12px;
     background-color: #fff;
-    max-width: 264px;
+    max-width: 364px;
     margin: 0 auto;
     border-radius: 1000px;
     align-items: center;
@@ -72,15 +72,20 @@
 
 .subscriptiontabs .tab-content>.tab-pane>ul {
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .subscriptiontabs .tab-content .tab-pane>ul>li {
     background-color: #fff;
     border: 1px solid #F5F6F7;
-    width: calc(100%/3 - 20px);
+    max-width: 470px;
     position: relative;
     border-radius: 20px;
+}
+.subscriptiontabs .tab-content .tab-pane>ul>li + li {
+    margin-left: 50px;
 }
 
 .subscriptiontabs .tab-content .tab-pane>ul>li>.title {
@@ -189,7 +194,7 @@
 
 .subscriptiontabs .tab-content ul>li>.title>h3 {
     color: #000;
-    font-size: 48px;
+    font-size: 34px;
     font-weight: 700;
     line-height: 1.3;
     -webkit-transition: all .3s ease;
