category drag and drpo done

--- a/src/Components/DashboardComponents/Categories/categories.css
+++ b/src/Components/DashboardComponents/Categories/categories.css
@@ -110,7 +110,7 @@ justify-content: space-between;
 .reorder-icon-div {
     display: flex;
     justify-content: end;
-   
+   cursor: pointer;
 }
 .reorder-head{
     font-family: Neuzeit Grotesk;
