--- a/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
+++ b/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
@@ -183,9 +183,10 @@
     }
 
     .dasboardbody .contentpart {
-        padding: 20px;
+        padding: 20px 15px 10px 10px;
     }    
 }
+
 
 @media (max-width: 767px) { 
     .fullsidebar .sidebar>.logo .fulllogo,
