--- a/src/Components/DashboardComponents/Categories/categories.css
+++ b/src/Components/DashboardComponents/Categories/categories.css
@@ -31,6 +31,10 @@ justify-content: space-between;
 
 }
 
+.ReorderCurese{
+    cursor: pointer;
+}
+
 .itemCategory {
     text-align: center;
     color: #000;
