--- a/src/fonts/stylesheet.css
+++ b/src/fonts/stylesheet.css
@@ -1,51 +1,77 @@
 @font-face {
-    font-family: 'DIN 30640 Std';
-    src: url('DINNeuzeitGroteskStd-Light.eot');
-    src: url('DINNeuzeitGroteskStd-Light.eot?#iefix') format('embedded-opentype'),
-        url('DINNeuzeitGroteskStd-Light.woff2') format('woff2'),
-        url('DINNeuzeitGroteskStd-Light.woff') format('woff'),
-        url('DINNeuzeitGroteskStd-Light.ttf') format('truetype'),
-        url('DINNeuzeitGroteskStd-Light.svg#DINNeuzeitGroteskStd-Light') format('svg');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'NeuzeitGroteskCondW01';
-    src: url('NeuzeitGroteskCondW01-Black.eot');
-    src: url('NeuzeitGroteskCondW01-Black.eot?#iefix') format('embedded-opentype'),
-        url('NeuzeitGroteskCondW01-Black.woff2') format('woff2'),
-        url('NeuzeitGroteskCondW01-Black.woff') format('woff'),
-        url('NeuzeitGroteskCondW01-Black.ttf') format('truetype'),
-        url('NeuzeitGroteskCondW01-Black.svg#NeuzeitGroteskCondW01-Black') format('svg');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'NeuzeitGroteskW01';
-    src: url('NeuzeitGroteskW01-Regular.eot');
-    src: url('NeuzeitGroteskW01-Regular.eot?#iefix') format('embedded-opentype'),
-        url('NeuzeitGroteskW01-Regular.woff2') format('woff2'),
-        url('NeuzeitGroteskW01-Regular.woff') format('woff'),
-        url('NeuzeitGroteskW01-Regular.ttf') format('truetype'),
-        url('NeuzeitGroteskW01-Regular.svg#NeuzeitGroteskW01-Regular') format('svg');
+    font-family: 'NeuzeitGroCon-Bla';
+    src: url('NeuzeitGroCon-Bla.eot');
+    src: url('NeuzeitGroCon-Bla.eot?#iefix') format('embedded-opentype'),
+        url('NeuzeitGroCon-Bla.woff2') format('woff2'),
+        url('NeuzeitGroCon-Bla.woff') format('woff'),
+        url('NeuzeitGroCon-Bla.ttf') format('truetype'),
+        url('NeuzeitGroCon-Bla.svg#NeuzeitGroCon-Bla') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'NeuzeitS-Book';
-    src: url('NeuzeitS-Book.eot');
-    src: url('NeuzeitS-Book.eot?#iefix') format('embedded-opentype'),
-        url('NeuzeitS-Book.woff2') format('woff2'),
-        url('NeuzeitS-Book.woff') format('woff'),
-        url('NeuzeitS-Book.ttf') format('truetype'),
-        url('NeuzeitS-Book.svg#NeuzeitS-Book') format('svg');
+    font-family: 'NeuzeitGroExt-Bla';
+    src: url('NeuzeitGroExt-Bla.eot');
+    src: url('NeuzeitGroExt-Bla.eot?#iefix') format('embedded-opentype'),
+        url('NeuzeitGroExt-Bla.woff2') format('woff2'),
+        url('NeuzeitGroExt-Bla.woff') format('woff'),
+        url('NeuzeitGroExt-Bla.ttf') format('truetype'),
+        url('NeuzeitGroExt-Bla.svg#NeuzeitGroExt-Bla') format('svg');
     font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'NeuzeitGro-Reg';
+    src: url('NeuzeitGro-Reg.eot');
+    src: url('NeuzeitGro-Reg.eot?#iefix') format('embedded-opentype'),
+        url('NeuzeitGro-Reg.woff2') format('woff2'),
+        url('NeuzeitGro-Reg.woff') format('woff'),
+        url('NeuzeitGro-Reg.ttf') format('truetype'),
+        url('NeuzeitGro-Reg.svg#NeuzeitGro-Reg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'NeuzeitGro-Lig';
+    src: url('NeuzeitGro-Lig.eot');
+    src: url('NeuzeitGro-Lig.eot?#iefix') format('embedded-opentype'),
+        url('NeuzeitGro-Lig.woff2') format('woff2'),
+        url('NeuzeitGro-Lig.woff') format('woff'),
+        url('NeuzeitGro-Lig.ttf') format('truetype'),
+        url('NeuzeitGro-Lig.svg#NeuzeitGro-Lig') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'NeuzeitGro-Bla';
+    src: url('NeuzeitGro-Bla.eot');
+    src: url('NeuzeitGro-Bla.eot?#iefix') format('embedded-opentype'),
+        url('NeuzeitGro-Bla.woff2') format('woff2'),
+        url('NeuzeitGro-Bla.woff') format('woff'),
+        url('NeuzeitGro-Bla.ttf') format('truetype'),
+        url('NeuzeitGro-Bla.svg#NeuzeitGro-Bla') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'NeuzeitGro-Bol';
+    src: url('NeuzeitGro-Bol.eot');
+    src: url('NeuzeitGro-Bol.eot?#iefix') format('embedded-opentype'),
+        url('NeuzeitGro-Bol.woff2') format('woff2'),
+        url('NeuzeitGro-Bol.woff') format('woff'),
+        url('NeuzeitGro-Bol.ttf') format('truetype'),
+        url('NeuzeitGro-Bol.svg#NeuzeitGro-Bol') format('svg');
+    font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
